# food_computer_vision

./: .gitignore  pyproject.toml
training/: 09_pytorch_model_deployment (1).ipynb  train.ipynb
